# parser-spimex-async

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_06_2316-9f33f865a810_create_table_spimex.py
db/: config.py
db/models/: __init__.py  base.py  database.py  spimex.py
parser/: async_processor.py  spimex_parser.py
