[project]
name = "parser-spimex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "alembic>=1.15.1",
    "asyncio>=3.4.3",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "lxml>=5.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
    "sqlalchemy[asyncio]>=2.0.39",
    "xlrd>=2.0.1",
]
